syntax = "proto3";

package project;

option go_package = "internal/project/proto;projectpb";

// ----------- Service Definition -----------
service ProjectService {
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse);
  rpc GetUserProjects(GetUserProjectsRequest) returns (GetUserProjectsResponse);
  rpc GetProjectDetails(GetProjectDetailsRequest) returns (GetProjectDetailsResponse);
  rpc DiscoverProjects(DiscoverProjectsRequest) returns (DiscoverProjectsResponse);
  rpc AssignFreelancer(AssignFreelancerRequest) returns (AssignFreelancerResponse);
  rpc UpdateProject(UpdateProjectRequest) returns (UpdateProjectResponse);
  rpc DeleteProject(DeleteProjectRequest) returns (DeleteProjectResponse);
}

// ----------- Messages -----------

message CreateProjectRequest {
  string client_id = 1;
  string project_name = 2;
  string description = 3;
  string start_date = 4;
  string end_date = 5;
}

message CreateProjectResponse {
  string project_id = 1;
  string status = 2;
}

message GetUserProjectsRequest {
  string user_id = 1;
}

message UserProject {
  string project_id = 1;
  string project_name = 2;
  string role = 3; // "client" or "freelancer"
  string start_date = 4;
  string end_date = 5;
}

message GetUserProjectsResponse {
  repeated UserProject projects = 1;
}

message GetProjectDetailsRequest {
  string project_id = 1;
}

message Freelancer {
  string user_id = 1;
  string name = 2;
}

message GetProjectDetailsResponse {
  string project_id = 1;
  string project_name = 2;
  string description = 3;
  string client_id = 4;
  repeated Freelancer assigned_freelancers = 5;
  string start_date = 6;
  string end_date = 7;
}

message DiscoverProjectsRequest {
  repeated string skills = 1;
  int32 experience_min = 2;
  repeated string languages = 3;
}

message DiscoveredProject {
  string project_id = 1;
  string project_name = 2;
  string description = 3;
  string client_id = 4;
  string start_date = 5;
  string end_date = 6;
}

message DiscoverProjectsResponse {
  repeated DiscoveredProject projects = 1;
}

message AssignFreelancerRequest {
  string project_id = 1;
  string freelancer_id = 2;
}

message AssignFreelancerResponse {
  string project_id = 1;
  string freelancer_id = 2;
  string status = 3;
}

message UpdateProjectRequest {
  string project_id = 1;
  string project_name = 2;
  string description = 3;
  string end_date = 4;
}

message UpdateProjectResponse {
  string project_id = 1;
  string status = 2;
}

message DeleteProjectRequest {
  string project_id = 1;
}

message DeleteProjectResponse {
  string project_id = 1;
  string status = 2;
}
